Create swag documentation
